MiniCompiladorWorkflow/tests/invalid/error2.wf
tarea inicio { print("Sin punto y coma") }
